--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,15 +4,15 @@
   Include:
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", 1, @ratings_hash[rating]
+    = check_box_tag "ratings[#{rating}]", 1, @hash_rate[rating]
   = submit_tag 'Refresh' , id: "ratings_submit"
   
 %table#movies
   %thead
     %tr
-      %th{class: @class_title}= link_to "Movie Title", movies_path(:sort => "title"), id: "title_header", class: @class_title
+      %th{class: @sort_title}= link_to "Movie Title", movies_path(:sort => "title"), id: "title_header", class: @class_title
       %th Rating
-      %th{class: @class_release_date}= link_to "Release Date", movies_path(:sort => "release_date"), id: "release_date_header", class: @class_release_date
+      %th{class: @sort_release_date}= link_to "Release Date", movies_path(:sort => "release_date"), id: "release_date_header", class: @class_release_date
       %th More Info
   %tbody
     - @movies.each do |movie|
