Part1 and Part2

--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,4 +1,6 @@
 -#  This file is app/views/movies/index.html.haml
+
+// hw2 part1 and part2
 %h1 All Movies
 = form_tag movies_path, id: "ratings_form", :method => :get do
   Include:
